# PyCostAudit

./: ADDING_PROVIDERS.md  ALERTS_SETUP.md  ANTHROPIC_DISTRIBUTION_CHANNELS.md  CLAUDE.md  CLAUDE_CODE_API_RESEARCH.md  CUSTOM_PROVIDERS.md  Cargo.toml  DESIGN_2B_UNIFIED_COST_MODEL.md  DESIGN_2C_DASHBOARD.md  DESIGN_2D_ALERTING_SLACK_TWILIO.md  DUAL-MONITORING-GUIDE.md  FEATURES_ROADMAP.md  FILE_AUDIT.md  GAP_ANALYSIS.md  MCP_SETUP_AND_SUBMIT.md  MOCK_PRICING_DATA.md  PHASE_1B_ANNOUNCEMENTS.md  PHASE_1B_EXECUTION_CHECKLIST.md  PHASE_1B_MCP_REGISTRATION.md  PHASE_1B_SUMMARY.md  PHASE_2C_COMPLETE.md  PHASE_2_PROGRESS.md  PHASE_3_COMPLETE.md  PRICING_DATA.md  PRIORITY_ROADMAP.md  QUICK_START.md  README.md  REMEDIATION_EXECUTION_PLAN.md  REPORTS_SETUP.md  RESEARCH_ROADMAP.md  ROADMAP.md  ROADMAP_2026.md  ROADMAP_HONEST.md  ROADMAP_PRIORITIZED.md  SESSION_SUMMARY.md  SKILL_GUIDE.md  TOKEN_COUNTER_LIBRARIES_COMPREHENSIVE.md  VISION.md  auto_submit.sh  claude_skill_definition.json  (+11 more)
.claude/: settings.json  track_operation.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
browser-extension/: README.md  background.js  content.js  manifest.json  popup.css  popup.html  popup.js  tracker.js
crates/cost-reporter/: Cargo.toml
crates/cost-reporter/src/: analyzer.rs  audit.rs  cost_tracker.rs  lib.rs  provider_integrations.rs  storage.rs  types.rs
dashboard/components/: BudgetProgressBar.tsx  CostTrendChart.tsx  Layout.tsx  MetricsCard.tsx  ProviderBreakdownChart.tsx
dashboard/pages/: _app.tsx  index.tsx
docs/: CONTRIBUTING.md  conf.py  index.rst
examples/: demo_claude_code_tracking.py  quick_start.py
pycostaudit/: __init__.py  advanced_filters.py  alerting.py  alerts_cli.py  alerts_service.py  anomaly_detection.py  anthropic_integration.py  backend_service.py  cli_interactive.py  custom_report_builder.py  detailed_recommendations.py  detailed_token_classifier.py  forecasting_service.py  interactive_guide.py  ml_token_estimator.py  persistence.py  recommendations_engine.py  reporting.py  reports_cli.py  reports_service.py  telemetry.py  token_classifier.py  user_context.py
pycostaudit/dashboard/: app.py  models.py
python/: Cargo.toml
python/src/: lib.rs
python/src/pycost_reporter/: __init__.py
pytokencalc/: __init__.py  cost_calculator.py  cost_models.py  database.py  exceptions.py  persistence.py
pytokencalc/tokenizers/: base.py
tests/: test_accuracy_verification.py  test_advanced_filters.py  test_alerting.py  test_alerts_service.py  test_anomaly_detection.py  test_cost_model.py  test_cost_models_v6.py  test_database_schema.py  test_forecasting.py  test_integration.py  test_pdf_excel_export.py  test_reports_service.py  test_token_counter.py
