[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin.build"

[project]
name = "pycostaudit"
version = "1.0.0"
description = "Track Claude API costs across 15+ dimensions — ML forecasting, budget alerts, compliance reporting. Identify hidden cost multipliers (3.6x-1000x) and save 50-80% on LLM spending."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
maintainers = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
keywords = [
    "claude",
    "llm",
    "cost-tracking",
    "cost-optimization",
    "budget-monitoring",
    "api-costs",
    "machine-learning",
    "forecasting",
    "time-series",
    "arima",
    "compliance",
    "soc2",
    "hipaa",
    "gdpr",
    "audit-trail",
    "anthropic",
    "ai-cost-management",
    "financial-analytics",
    "usage-tracking",
    "billing-optimization"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "sqlalchemy==2.0.23",
    "pydantic==2.4.2",
    "pydantic[email]==2.4.2",
    "pandas==2.1.0",
    "reportlab==4.0.7",
    "openpyxl==3.11.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "mypy==1.7.0",
    "black==23.12.0",
    "ruff==0.1.8",
]

postgres = [
    "psycopg2-binary==2.9.9",
]

[project.urls]
Homepage = "https://github.com/Mullassery/PyCostAudit"
Repository = "https://github.com/Mullassery/PyCostAudit"
"Bug Tracker" = "https://github.com/Mullassery/PyCostAudit/issues"
Documentation = "https://github.com/Mullassery/PyCostAudit#readme"
Changelog = "https://github.com/Mullassery/PyCostAudit/releases"
"Source Code" = "https://github.com/Mullassery/PyCostAudit/tree/main"
Discussions = "https://github.com/Mullassery/PyCostAudit/discussions"

[tool.maturin]
module-name = "pycostaudit._core"
manifest-path = "python/Cargo.toml"
python-source = "python/src"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
