[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytokencalc"
version = "0.7.0"
description = "Multi-provider LLM token counter & cost calculator. Unified token counting and cost calculation across 20+ cloud providers and 10+ open-source APIs."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
maintainers = [{ name = "Georgi Mammen Mullassery", email = "mullassery@gmail.com" }]
keywords = [
    "llm",
    "token-counting",
    "cost-calculation",
    "multi-provider",
    "gpt",
    "claude",
    "gemini",
    "llama",
    "mistral",
    "groq",
    "deepinfra",
    "token-counter",
    "tokenizer",
    "ai-cost-management",
    "openanchor"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Utilities",
]

dependencies = [
    "pydantic>=2.0",  # Data validation
]

[project.optional-dependencies]
# Local tokenizers (Phase 1) - for token counting support
tokenizers = [
    "tiktoken>=0.5.0",  # OpenAI GPT token counting
    "transformers>=4.30.0",  # Llama, Mistral, 1000+ models
    "sentencepiece>=0.1.99",  # SentencePiece dependency for HF models
]

# Development and testing
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/Mullassery/PyTokenCalc"
Repository = "https://github.com/Mullassery/PyTokenCalc"
"Bug Tracker" = "https://github.com/Mullassery/PyTokenCalc/issues"
Documentation = "https://github.com/Mullassery/PyTokenCalc#readme"
Changelog = "https://github.com/Mullassery/PyTokenCalc/releases"
"Source Code" = "https://github.com/Mullassery/PyTokenCalc/tree/main"
Discussions = "https://github.com/Mullassery/PyTokenCalc/discussions"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
